# pokedex

./: .gitignore  LICENSE  README.md  pyproject.toml
.trae/documents/: pokedex-development-plan.md
app/: config.py  main.py
app/models/: pokemon.py
app/routers/: pokemon.py
app/services/: pokeapi.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: base.html  detail.html  index.html
